# mealie-rag-poc

./: .release-please-manifest.json  mise.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: docker-build-push.yaml  mealierag-tests.yaml  release-please.yaml
mock_mealie/: main.py  recipes.json
scripts/: build_docker_images  setup
src/mealierag/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/mealierag/src/mealierag/: chat.py  cli.py  config.py  run_ingest.py  run_qa_cli.py  run_qa_ui.py  vectordb.py
src/mealierag/tests/: test_cli.py
